# pandera-report

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  test.py
.github/workflows/: pipeline.yml  publish.yml
pandera_report/: __init__.py  options.py  parser.py  validator.py  version.py
requirements/: requirements-dev.txt  requirements.txt
tests/: conftest.py  test_defautl_failure_parser.py  test_validator.py
