[tool.poetry]
name = "pandera-report"
version = "0.1.0"
description = "Pandera Report for row-based reporting by using the power of pandera."
authors = ["Pit Nahrstedt <pit.nahrstedt@outlook.de>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
packages = [{include = "pandera_report"}]


[tool.poetry.urls]
Homepage = "https://github.com/Luanee/pandera-report"


[tool.poetry.dependencies]
python = "^3.9, <3.13"
pandas = "^2.1.0"
pandera = "0.16.1"
pre-commit = "^3.4.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
color=true
line-length = 120


[tool.isort]
profile = "black"
line_length = 120
color_output = true
combine_as_imports = true
ensure_newline_before_comments = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 3
include_trailing_comma = true
lines_between_sections = 1
multi_line_output = 3
use_parentheses = true
skip_gitignore = true
skip = [
    ".coverage",
    "coverage/*",
    "cov.html",
    ".dockerignore",
    ".env",
    ".github",
    ".gitignore",
    ".html",
    ".md",
    ".python-version",
    ".rst",
    ".xml"
]
src_paths = [
    "pandera_report/",
    "tests/",
]



[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = "tests"
filterwarnings = "error"
omit = [
    "*/__init__.py",
]
addopts = '''
    --verbose
    -p no:warnings
    --strict-markers
    --tb=short
    --cov-report=xml:coverage/coverage.xml
    --cov-report term-missing
    --cov=pandera_report
    --cov=tests
    --cov-branch
    --no-cov-on-fail
'''


[tool.coverage.report]
skip_empty = true
show_missing = true
ignore_errors = true
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
fail_under=80

[tool.coverage.run]
branch = true
source = ["pandera_report", "tests"]
omit = [
    "__init__.py",  # Exclude test files from coverage analysis
    "tests/*",  # Exclude test files from coverage analysis
]

[tool.coverage.html]
directory = "coverage"


[tool.pylint.MASTER]
ignore-patterns = 'tests/,test_(.)*\.py,conftest.py'

[tool.pylint.BASIC]
# Good variable names which should always be accepted, separated by a comma.
good-names = """
    i,j,k,
    id,_
"""

[tool.pylint.MESSAGES_CONTROL]
disable = """
    arguments-differ,
    duplicate-code,
    function-redefined,
    import-outside-toplevel,
    inconsistent-return-statements,
    invalid-name,
    line-too-long,
    no-else-return,
    protected-access,
    too-few-public-methods,
    too-many-ancestors,
    too-many-instance-attributes,
    too-many-lines,
    ungrouped-imports,
    unnecessary-dunder-call,
    use-dict-literal,
    missing-module-docstring
"""
extension-pkg-whitelist = "pydantic"
